--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Frejoba</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/Frejoba.png">
     <link rel="stylesheet" href="customcss/new.css">
     <link rel="stylesheet" href="style.css">
 </head>
