minor post api correction

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <script>
         function postData1() {
             const email = document.getElementById("inputEmail1").value;
-            const apiUrl = "https://mailserver.crezalo.com/"; // Replace with your API endpoint
+            const apiUrl = "https://mailserver.crezalo.com/validation/"; // Replace with your API endpoint
 
             // Make a POST request to the API endpoint with the input value as the payload
             fetch(apiUrl, {
@@ -267,7 +267,7 @@
         }
         function postData2() {
             const email = document.getElementById("inputEmail2").value;
-            const apiUrl = "https://mailserver.crezalo.com/"; // Replace with your API endpoint
+            const apiUrl = "https://mailserver.crezalo.com/validation/"; // Replace with your API endpoint
 
             // Make a POST request to the API endpoint with the input value as the payload
             fetch(apiUrl, {
@@ -289,7 +289,7 @@
         }
         function postData3() {
             const email = document.getElementById("inputEmail3").value;
-            const apiUrl = "https://mailserver.crezalo.com/"; // Replace with your API endpoint
+            const apiUrl = "https://mailserver.crezalo.com/validation/"; // Replace with your API endpoint
 
             // Make a POST request to the API endpoint with the input value as the payload
             fetch(apiUrl, {
