--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
     />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N1TFL335CY"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-N1TFL335CY"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'G-N1TFL335CY');
+      gtag("config", "G-N1TFL335CY");
     </script>
-
   </head>
 
   <body>
@@ -496,10 +500,10 @@
               <option value="director">director</option>
               <option value="executive">executive</option>
             </select>
-            <select name="limit" id="limit">
+            <!-- <select name="limit" id="limit">
               <option value="10">10</option>
               <option value="100">100</option>
-            </select>
+            </select> -->
             <select name="sortBy" id="sortBy">
               <option value="recent">recent</option>
               <option value="relevant">relevant</option>
