Job Description and UX update

--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
         </div>
       </div>
     </div>
+    <hr />
 
     <div class="container">
-      <hr />
       <section class="search">
         <h2>Find Your Dream Job Now</h2>
         <form action="#" method="get" class="job-search-input">
@@ -518,13 +518,13 @@
         <div class="container">
           <div id="search" class="search-skill search--hidden">
             <div class="search__content" id="search-content"></div>
-            <button id="clear" class="search__clear">Clear</button>
+            <button id="clear" class="search__clear" type="button">
+              Clear
+            </button>
           </div>
           <div class="jobs" id="jobs"></div>
         </div>
-        <div class="jobs" id="jobs"></div>
       </section>
-
       <footer>
         <div class="row">
           <div class="col-lg-12">
@@ -538,7 +538,6 @@
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/custom-select.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Script to Activate the Carousel -->
