setting empty default values for dropdown menu

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
           <div>
             <!-- <input type="date" name="dateSincePosted" /> -->
             <select name="jobType" id="jobType">
+              <option value="">Job Type</option>
               <option value="full time">full time</option>
               <option value="part time">part time</option>
               <option value="contract">contract</option>
@@ -460,12 +461,14 @@
               <option value="internship">internship</option>
             </select>
             <select name="remoteFilter" id="remoteFilter">
+              <option value="">Location Type</option>
               <option value="on site">on site</option>
               <option value="remote">remote</option>
               <option value="hybrid">hybrid</option>
             </select>
             <!-- <input type="number" name="salary" placeholder="Salary" /> -->
             <select name="experienceLevel" id="experienceLevel">
+              <option value="">Experience Level</option>
               <option value="internship">internship</option>
               <option value="entry level">entry level</option>
               <option value="associate">associate</option>
@@ -497,7 +500,7 @@
           </div>
           <div class="jobs" id="jobs">
             <div class="svgLoader"><img src="./img/svgs/loader.svg" /></div>
-          </div>
+                      </div>
         </div>
       </section>
       <footer>
