company banner click Job Search

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="slider-container">
       <div class="slider">
         <div class="slide-track">
-          <div class="slide">
+          <div class="slide" onclick='jobList("Accenture");'>
             <img
               src="./img/globalmncs/Accenture.png"
               height="70"
@@ -67,7 +67,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Amazon");'>
             <img
               src="./img/globalmncs/Amazon.png"
               height="70"
@@ -75,7 +75,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Arcesium");'>
             <img
               src="./img/globalmncs/Arcesium.png"
               height="70"
@@ -83,7 +83,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Deloitte");'>
             <img
               src="./img/globalmncs/Deloitte.png"
               height="70"
@@ -91,7 +91,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("DEShaw");'>
             <img
               src="./img/globalmncs/DEShaw.png"
               height="70"
@@ -99,7 +99,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Grab");'>
             <img
               src="./img/globalmncs/Grab.png"
               height="70"
@@ -107,7 +107,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("IBM");'>
             <img
               src="./img/globalmncs/IBM.png"
               height="70"
@@ -115,7 +115,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Microsoft");'>
             <img
               src="./img/globalmncs/Microsoft.png"
               height="70"
@@ -123,7 +123,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Oracle");'>
             <img
               src="./img/globalmncs/Oracle.png"
               height="70"
@@ -131,7 +131,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("PwC");'>
             <img
               src="./img/globalmncs/PwC.png"
               height="70"
@@ -139,7 +139,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Salesforce");'>
             <img
               src="./img/globalmncs/Salesforce.png"
               height="70"
@@ -147,7 +147,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Tekion");'>
             <img
               src="./img/globalmncs/Tekion.png"
               height="70"
@@ -155,7 +155,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Vmware");'>
             <img
               src="./img/globalmncs/Vmware.png"
               height="70"
@@ -163,7 +163,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Walmart");'>
             <img
               src="./img/globalmncs/Walmart.png"
               height="70"
@@ -171,7 +171,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Ather");'>
             <img
               src="./img/hypergrowth/Ather.png"
               height="70"
@@ -179,7 +179,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Briq");'>
             <img
               src="./img/hypergrowth/Briq.png"
               height="70"
@@ -187,7 +187,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Capillary");'>
             <img
               src="./img/hypergrowth/Capillary.png"
               height="70"
@@ -195,7 +195,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Fampay");'>
             <img
               src="./img/hypergrowth/Fampay.png"
               height="70"
@@ -203,7 +203,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Jumbotail");'>
             <img
               src="./img/hypergrowth/Jumbotail.png"
               height="70"
@@ -211,7 +211,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Lendingkart");'>
             <img
               src="./img/hypergrowth/Lendingkart.png"
               height="70"
@@ -219,7 +219,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Navi");'>
             <img
               src="./img/hypergrowth/Navi.png"
               height="70"
@@ -227,7 +227,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("RupeeK");'>
             <img
               src="./img/hypergrowth/RupeeK.png"
               height="70"
@@ -235,7 +235,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Shiprocket");'>
             <img
               src="./img/hypergrowth/Shiprocket.png"
               height="70"
@@ -243,7 +243,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Superset");'>
             <img
               src="./img/hypergrowth/Superset.png"
               height="70"
@@ -251,7 +251,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Tracxn");'>
             <img
               src="./img/hypergrowth/Tracxn.png"
               height="70"
@@ -259,7 +259,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Ula");'>
             <img
               src="./img/hypergrowth/Ula.png"
               height="70"
@@ -267,7 +267,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Vicara");'>
             <img
               src="./img/hypergrowth/Vicara.png"
               height="70"
@@ -275,7 +275,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Vouch");'>
             <img
               src="./img/hypergrowth/Vouch.png"
               height="70"
@@ -283,7 +283,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("WebEngage");'>
             <img
               src="./img/hypergrowth/WebEngage.png"
               height="70"
@@ -291,7 +291,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("YellowClass");'>
             <img
               src="./img/hypergrowth/YellowClass.png"
               height="70"
@@ -299,7 +299,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("BharatPe");'>
             <img
               src="./img/unicorns/BharatPe.png"
               height="70"
@@ -307,7 +307,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Cars24");'>
             <img
               src="./img/unicorns/Cars24.png"
               height="70"
@@ -315,10 +315,10 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("CRED");'>
             <img src="./img/unicorns/CRED.png" height="70" width="125" alt="" />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Dailyhunt");'>
             <img
               src="./img/unicorns/Dailyhunt.png"
               height="70"
@@ -326,7 +326,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Flipkart");'>
             <img
               src="./img/unicorns/Flipkart.png"
               height="70"
@@ -334,7 +334,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Grofers");'>
             <img
               src="./img/unicorns/Grofers.png"
               height="70"
@@ -342,7 +342,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Groww");'>
             <img
               src="./img/unicorns/Groww.png"
               height="70"
@@ -350,7 +350,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Meesho");'>
             <img
               src="./img/unicorns/Meesho.png"
               height="70"
@@ -358,7 +358,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("NoBroker");'>
             <img
               src="./img/unicorns/NoBroker.png"
               height="70"
@@ -366,10 +366,10 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Ola");'>
             <img src="./img/unicorns/Ola.png" height="70" width="125" alt="" />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("PayTm");'>
             <img
               src="./img/unicorns/PayTm.png"
               height="70"
@@ -377,7 +377,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("PharmEasy");'>
             <img
               src="./img/unicorns/PharmEasy.png"
               height="70"
@@ -385,7 +385,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Postman");'>
             <img
               src="./img/unicorns/Postman.png"
               height="70"
@@ -393,7 +393,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Slice");'>
             <img
               src="./img/unicorns/Slice.png"
               height="70"
@@ -401,7 +401,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("upGrad");'>
             <img
               src="./img/unicorns/upGrad.png"
               height="70"
@@ -409,7 +409,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("UrbanCompany");'>
             <img
               src="./img/unicorns/UrbanCompany.png"
               height="70"
@@ -417,7 +417,7 @@
               alt=""
             />
           </div>
-          <div class="slide">
+          <div class="slide" onclick='jobList("Zoho");'>
             <img src="./img/unicorns/Zoho.png" height="70" width="125" alt="" />
           </div>
         </div>
@@ -500,7 +500,7 @@
           </div>
           <div class="jobs" id="jobs">
             <div class="svgLoader"><img src="./img/svgs/loader.svg" /></div>
-                      </div>
+          </div>
         </div>
       </section>
       <footer>
