Company List and Navbar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="">
+          <a class="navbar-brand" href="index.html">
             <img
               src="LogoTp.png"
               height="60"
@@ -52,6 +52,14 @@
             &nbsp;Code My Career
           </a>
         </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="companies.html">500+ Company List</a></li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
       </div>
     </nav>
 
@@ -423,6 +431,8 @@
         </div>
       </div>
     </div>
+
+    <button class="mobile-company-nav-button" type="button" onclick="window.location.href='companies.html';">500+ Company List</button>
     <hr />
 
     <div class="container">
