No Result bugs, remote friendly company in same company page

--- a/remotefriendlycompanies.html
+++ b/remotefriendlycompanies.html
@@ -75,35 +75,35 @@
             <th></th>
           </tr>
           <tr>
-            <td><a href="#A">A</a></td>
-            <td><a href="#B">B</a></td>
-            <td><a href="#C">C</a></td>
-            <td><a href="#D">D</a></td>
-            <td><a href="#E">E</a></td>
-            <td><a href="#F">F</a></td>
-            <td><a href="#G">G</a></td>
-            <td><a href="#H">H</a></td>
-            <td><a href="#I">I</a></td>
-            <td><a href="#J">J</a></td>
-            <td><a href="#K">K</a></td>
-            <td><a href="#L">L</a></td>
-            <td><a href="#M">M</a></td>
-            <td><a href="#N">N</a></td>
+            <td><a href="#RA">A</a></td>
+            <td><a href="#RB">B</a></td>
+            <td><a href="#RC">C</a></td>
+            <td><a href="#RD">D</a></td>
+            <td><a href="#RE">E</a></td>
+            <td><a href="#RF">F</a></td>
+            <td><a href="#RG">G</a></td>
+            <td><a href="#RH">H</a></td>
+            <td><a href="#RI">I</a></td>
+            <td><a href="#RJ">J</a></td>
+            <td><a href="#RK">K</a></td>
+            <td><a href="#RL">L</a></td>
+            <td><a href="#RM">M</a></td>
+            <td><a href="#RN">N</a></td>
           </tr>
           <tr>
-            <td><a href="#O">O</a></td>
-            <td><a href="#P">P</a></td>
-            <td><a href="#Q">Q</a></td>
-            <td><a href="#R">R</a></td>
-            <td><a href="#S">S</a></td>
-            <td><a href="#T">T</a></td>
-            <td><a href="#U">U</a></td>
-            <td><a href="#V">V</a></td>
-            <td><a href="#W">W</a></td>
-            <td><a href="#X">X</a></td>
-            <td><a href="#Y">Y</a></td>
-            <td><a href="#Z">Z</a></td>
-            <td><a href="#0-9">0-9</a></td>
+            <td><a href="#RO">O</a></td>
+            <td><a href="#RP">P</a></td>
+            <td><a href="#RQ">Q</a></td>
+            <td><a href="#RR">R</a></td>
+            <td><a href="#RS">S</a></td>
+            <td><a href="#RT">T</a></td>
+            <td><a href="#RU">U</a></td>
+            <td><a href="#RV">V</a></td>
+            <td><a href="#RW">W</a></td>
+            <td><a href="#RX">X</a></td>
+            <td><a href="#RY">Y</a></td>
+            <td><a href="#RZ">Z</a></td>
+            <td><a href="#R0-9">0-9</a></td>
             <td></td>
           </tr>
         </tbody>
@@ -115,7 +115,7 @@
             PLEASE DON'T CHANGE THE NUMBERING. KEEP EVERYTHING STARTING WITH 1.
             -->
       <!-- ## A   -->
-      <h2 id="A">A</h2>
+      <h2 id="RA">A</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=abiturma">abiturma</a>
@@ -326,7 +326,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="B">B</h2>
+      <h2 id="RB">B</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Bairesdev"
@@ -487,7 +487,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="C">C</h2>
+      <h2 id="RC">C</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Cabify">Cabify</a>
@@ -748,7 +748,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="D">D</h2>
+      <h2 id="RD">D</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Dalenys">Dalenys</a>
@@ -874,7 +874,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="E">E</h2>
+      <h2 id="RE">E</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=EarthOfDrones"
@@ -986,7 +986,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="F">F</h2>
+      <h2 id="RF">F</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=FactorialHR"
@@ -1126,7 +1126,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="G">G</h2>
+      <h2 id="RG">G</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Gaggle">Gaggle</a>
@@ -1252,7 +1252,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="H">H</h2>
+      <h2 id="RH">H</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Hack Reactor Remote"
@@ -1363,7 +1363,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="I">I</h2>
+      <h2 id="RI">I</h2>
       <ol>
         <li><a href="http://codemycareer.github.io/?company=IBM">IBM</a></li>
         <li>
@@ -1499,7 +1499,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="J">J</h2>
+      <h2 id="RJ">J</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Jackson River"
@@ -1547,7 +1547,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="K">K</h2>
+      <h2 id="RK">K</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Kaggle">Kaggle</a>
@@ -1611,7 +1611,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="L">L</h2>
+      <h2 id="RL">L</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Labelbox">Labelbox</a>
@@ -1727,7 +1727,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="M">M</h2>
+      <h2 id="RM">M</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=madewithlove"
@@ -1881,7 +1881,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="N">N</h2>
+      <h2 id="RN">N</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Nagarro">Nagarro</a>
@@ -1943,7 +1943,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="O">O</h2>
+      <h2 id="RO">O</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=O'Reilly Media"
@@ -2035,7 +2035,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="P">P</h2>
+      <h2 id="RP">P</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Packlink">Packlink</a>
@@ -2208,7 +2208,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="Q">Q</h2>
+      <h2 id="RQ">Q</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Quaderno">Quaderno</a>
@@ -2225,7 +2225,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="R">R</h2>
+      <h2 id="RR">R</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Rackspace"
@@ -2341,7 +2341,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="S">S</h2>
+      <h2 id="RS">S</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Safeguard Global"
@@ -2591,7 +2591,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="T">T</h2>
+      <h2 id="RT">T</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Tag1 Consulting"
@@ -2769,7 +2769,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="U">U</h2>
+      <h2 id="RU">U</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Udacity">Udacity</a>
@@ -2798,7 +2798,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="V">V</h2>
+      <h2 id="RV">V</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Valimail">Valimail</a>
@@ -2844,7 +2844,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="W">W</h2>
+      <h2 id="RW">W</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=WalletHub"
@@ -2926,7 +2926,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="X">X</h2>
+      <h2 id="RX">X</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=X-Team">X-Team</a>
@@ -2938,7 +2938,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="Y">Y</h2>
+      <h2 id="RY">Y</h2>
       <ol>
         <li>
           <a href="http://codemycareer.github.io/?company=Yandex">Yandex</a>
@@ -2970,7 +2970,7 @@
       </ol>
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
-      <h2 id="Z">Z</h2>
+      <h2 id="RZ">Z</h2>
       <ol>
         <li><a href="http://codemycareer.github.io/?company=ZAMP">ZAMP</a></li>
         <li>
@@ -2998,7 +2998,7 @@
       <p class="alignRight">(<a href="#top">back to top</a>)</p>
       <br />
       <!-- ## 0-9   -->
-      <h2 id="0-9">0-9</h2>
+      <h2 id="R0-9">0-9</h2>
       <ol>
         <li><a href="http://codemycareer.github.io/?company=10up">10up</a></li>
         <li>
