--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="companies.html">500+ Company List</a></li>
+            <li><a href="companies.html">1200+ Company List</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -439,7 +439,7 @@
       type="button"
       onclick="window.location.href='companies.html';"
     >
-      500+ Company List
+      1200+ Company List
     </div>
 
     <hr />
@@ -1830,13 +1830,14 @@
       </section>
       <section class="job-listings">
         <h2>Latest Job Listings</h2>
-        <div class="container">
+        <div class="container" id="joblisting-container">
           <div id="search" class="search-skill search--hidden">
             <div class="search__content" id="search-content"></div>
             <button id="clear" class="search__clear" type="button">
               Clear
             </button>
           </div>
+          <h5 id="jobListDisclaimer"></h5>
           <div class="jobs" id="jobs">
             <div class="svgLoader"><img src="./img/svgs/loader.svg" /></div>
           </div>
