--- a/index.html
+++ b/index.html
@@ -5140,7 +5140,7 @@
       </div>
     </div>
 
-    <div class="backdrop-container" id="backdrop"></div>
+    <div class="backdrop-container" id="backdrop" onclick="closeNav()"></div>
 
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
