--- a/index.html
+++ b/index.html
@@ -8552,6 +8552,38 @@
           <button onclick="getJobsData()">Search</button>
         </form>
       </section>
+
+      <div class="company-links-container">
+        <a class="chip" id="cp_chip">
+          <img
+            class="chip-head"
+            src="https://media.licdn.com/dms/image/C4D0BAQELL3B0KmtQCw/company-logo_100_100/0/1630538686266?e=2147483647&v=beta&t=UCtJdSzi46pjLRUjqgEuszstNXiwfHlSgtPTlHFq_6A"
+          />
+          <div class="chip-content">Career Page</div>
+        </a>
+        <a class="chip" id="blind_chip">
+          <img
+            class="chip-head"
+            src="https://th.bing.com/th?id=ODLS.4174e30d-0a4f-424c-8e92-458e9025c0dc&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2"
+          />
+          <div class="chip-content">Blind</div>
+        </a>
+        <a class="chip" id="levels_chip">
+          <img
+            class="chip-head"
+            src="https://th.bing.com/th?id=ODLS.f6bdbb06-4317-4733-8b07-2e60af3ad5ca&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2"
+          />
+          <div class="chip-content">Levels.fyi</div>
+        </a>
+        <a class="chip" id="linkedin_chip">
+          <img
+            class="chip-head"
+            src="https://th.bing.com/th?id=ODLS.c1b94e26-52d8-4d85-8faf-a367583929ce&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2"
+          />
+          <div class="chip-content">Linkedin</div>
+        </a>
+      </div>
+
       <section class="job-listings">
         <h2>Latest Job Listings</h2>
         <div class="container" id="joblisting-container">
