google search console verififcation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta
+      name="google-site-verification"
+      content="SYSEuiYJYAuF8WmIq2SNv9W8EEwlrtrTUZUuyU3ocr4"
+    />
 
     <title>Code My Career</title>
     <link rel="icon" type="image/x-icon" href="LogoTp.ico" />
