--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Job Search Buddy that helps search through job openings from linkedin and career pages of 1200+ software companies"
+    />
     <meta name="author" content="" />
     <meta
       name="google-site-verification"
