--- a/index.html
+++ b/index.html
@@ -8650,13 +8650,23 @@
             <div class="interviewQuestionsTabContainer">
               <div class="tab-slider--nav">
                 <ul class="tab-slider--tabs">
-                  <li class="tab-slider--trigger active" rel="interview-questions-tab1">Questions</li>
-                  <li class="tab-slider--trigger" rel="interview-questions-tab2">Discussions</li>
+                  <li
+                    class="tab-slider--trigger active"
+                    rel="interview-questions-tab1"
+                  >
+                    Questions
+                  </li>
+                  <li
+                    class="tab-slider--trigger"
+                    rel="interview-questions-tab2"
+                  >
+                    Discussions
+                  </li>
                 </ul>
               </div>
               <div class="tab-slider--container">
                 <div id="interview-questions-tab1" class="tab-slider--body">
-                  <table class="table">
+                  <!-- <table class="table">
                     <thead>
                       <tr>
                         <th id="difficulty" data-order="desc">
@@ -8671,13 +8681,17 @@
                       </tr>
                     </thead>
                     <tbody id="liq_tableBody">
-                      <!-- Rows Populated Dynamically -->
+                    Rows Populated Dynamically
                     </tbody>
-                  </table>
+                  </table> -->
+                  <div class="svgLoader">
+                    <img src="./img/svgs/loader.svg" />
+                  </div>
                 </div>
                 <div id="interview-questions-tab2" class="tab-slider--body">
-                  <div class="svgLoader"><img src="./img/svgs/loader.svg" /></div>
-                  </p>
+                  <div class="svgLoader">
+                    <img src="./img/svgs/loader.svg" />
+                  </div>
                 </div>
               </div>
             </div>
